--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="android/out.apk"
+export_path="android/out2.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -24,8 +24,8 @@ custom_template/debug=""
 custom_template/release=""
 custom_template/use_custom_build=false
 command_line/extra_args=""
-version/code=1
-version/name="1.0"
+version/code=2
+version/name="1.1"
 package/unique_name="org.godotengine.$genname"
 package/name=""
 package/signed=true
@@ -39,10 +39,10 @@ screen/opengl_debug=false
 launcher_icons/main_192x192=""
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
-keystore/debug="D:/go/godot_projects/android/wws.jks"
+keystore/debug="android/wws.jks"
 keystore/debug_user="default"
 keystore/debug_password="142539"
-keystore/release="D:/go/godot_projects/android/wws.jks"
+keystore/release="android/wws.jks"
 keystore/release_user="default"
 keystore/release_password="142539"
 apk_expansion/enable=false
